<<<<<<< HEAD
<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab">TabActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_start_list">StartListActivity</string>
    <string name="logo">Logo</string>
    <string name="small_grey_1">Выберите контакты, которые вы считаете близкими</string>
    <string name="small_grey_2">друзьями или знакомыми, но с которыми вы редко общаетесь</string>
    <string name="main_small_black_text">Будут отслеживаться звонки и смс за период</string>
    <string name="default_dalay">30 дней</string>
    <string name="button_add_contact">Добавить</string>
    <string name="button_aok_contact">Вернуться к ШЖ</string>
    <string name="button_delete">Удалить всех из шж</string>
    <string name="button_settings">Настройки</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="demo_name">Иванов Иван Иванович</string>

    <string name="demo_status">Бывший друг</string>
    <string name="demo_date">22.03.2015</string>
    <string name="calls">звонков</string>
    <string name="sms">смс</string>
    <string name="app_name_short">ШЖ</string>
    <string name="about">
        \n
        Автор: Жалимов Антон \n
        Версия 1. Пакет классический. \n
        Посвящается: Николаев С, Будаква К, \n
        Зиновьев И, Парамонов А, Хохлов А
    </string>
    <string name="delete_history">Удалить историю</string>
    <string name="package_classic">Пакет классический</string>
</resources>

=======
<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab">TabActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_start_list">StartListActivity</string>
    <string name="logo">Logo</string>
    <string name="small_grey_1">Выберите контакты, которые вы считаете близкими</string>
    <string name="small_grey_2">друзьями или знакомыми, но с которыми вы редко общаетесь</string>
    <string name="main_small_black_text">Будут отслеживаться звонки и смс за период</string>
    <string name="default_dalay">30 дней</string>
    <string name="button_add_contact">Добавить</string>
    <string name="button_aok_contact">Вернуться к ШЖ</string>
    <string name="button_delete">Удалить всех из шж</string>
    <string name="button_settings">Настройки</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="demo_name">Иванов Иван Иванович</string>

    <string name="demo_status">Бывший друг</string>
    <string name="demo_date">22.03.2015</string>
    <string name="calls">звонков</string>
    <string name="sms">смс</string>
    <string name="app_name_short">ШЖ</string>
    <string name="about">
        \n
        Автор: Жалимов Антон \n
        Версия 1. Пакет классический. \n
        ЛДЛ \n
        Зиновьев И, Парамонов А, Хохлов А
    </string>
    <string name="delete_history">Удалить историю</string>
    <string name="package_classic">Пакет классический</string>
</resources>

>>>>>>> 49d28eb0877fb4d02ca30ad13e6abeecdf62e99e
