<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:id="@+id/header_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/header_background"
        android:paddingBottom="4dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="4dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/mini_logo" />

            <by.slesh.sj.view.view.BlueGradientTextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:shadowColor="@color/stroke_text"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="4"
                android:text="@string/app_name_short"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="22sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_app"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/settings_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_grey_item_background"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/period_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <by.slesh.sj.view.view.PFdinFont
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Период"
                    android:textColor="@color/small_grey"
                    android:textSize="18sp" />

                <by.slesh.sj.view.view.PFdinFont
                    android:id="@+id/period_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="30дней"
                    android:textColor="@color/small_grey"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/show_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_grey_item_background"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/show_phone_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <by.slesh.sj.view.view.PFdinFont
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Звонки входящие"
                    android:textColor="@color/small_grey"
                    android:textSize="18sp" />

                <by.slesh.sj.view.view.PFdinFont
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Отображать звонки в списке"
                    android:textColor="@color/small_grey"
                    android:textSize="14sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/is_show_call_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/show_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_grey_item_background"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/show_sms_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <by.slesh.sj.view.view.PFdinFont
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Смс"
                    android:textColor="@color/small_grey"
                    android:textSize="18sp" />

                <by.slesh.sj.view.view.PFdinFont
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Отображать смс в списке"
                    android:textColor="@color/small_grey"
                    android:textSize="14sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/is_show_sms_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_grey_item_background"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/delete_history_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/delete_history"
                android:textColor="@color/remove_contact_gradient_1" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_grey_item_background"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_grey_item_background"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
